--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,4 @@
-*.txt linguist-vendored=false
-*.txt linguist-generated=false
-*.txt linguist-documentation=false
-*.txt linguist-detectable=true
-
-*.md linguist-vendored=false
-*.md linguist-generated=false
-*.md linguist-documentation=false
-*.md linguist-detectable=true
+*.json linguist-vendored=false
+*.json linguist-generated=false
+*.json linguist-documentation=false
+*.json linguist-detectable=true
